# MarketSimulation

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: Company.h  Configuration.h  Customer.h  Factory.h  Market.h  Need.h  Product.h  Simulation.h
src/: Company.cpp  Customer.cpp  Factory.cpp  Market.cpp  Product.cpp  Simulation.cpp
